--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -897,3 +897,12 @@ button.MuiButtonBase-root.MuiFab-root.MuiFab-circular.MuiFab-sizeLarge.MuiFab-pr
   justify-content: center;
   align-items: center;
 }
+.create-new-product {
+  margin-left: 10px;
+}
+.create-new-product img {
+  width: 80px;
+  height: 80px;
+  object-fit: cover;
+  margin: 0 5px;
+}
