--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -741,12 +741,6 @@ button.MuiButtonBase-root.MuiFab-root.MuiFab-circular.MuiFab-sizeLarge.MuiFab-pr
     padding: 4vw;
   }
 }
-.redColor {
-  color: red;
-}
-.greenColor {
-  color: green;
-}
 .orderDetailsPage {
   background-color: white;
 }
@@ -905,4 +899,10 @@ button.MuiButtonBase-root.MuiFab-root.MuiFab-circular.MuiFab-sizeLarge.MuiFab-pr
   height: 80px;
   object-fit: cover;
   margin: 0 5px;
+}
+.redColor {
+  color: red !important;
+}
+.greenColor {
+  color: green !important;
 }
