--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -906,3 +906,6 @@ button.MuiButtonBase-root.MuiFab-root.MuiFab-circular.MuiFab-sizeLarge.MuiFab-pr
 .greenColor {
   color: green !important;
 }
+.purpleColor {
+  color: purple !important;
+}
