--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -909,3 +909,58 @@ button.MuiButtonBase-root.MuiFab-root.MuiFab-circular.MuiFab-sizeLarge.MuiFab-pr
 .purpleColor {
   color: purple !important;
 }
+
+.swiper {
+  width: 100%;
+  height: 100%;
+}
+
+.swiper-slide {
+  text-align: center;
+  font-size: 18px;
+  /* Center slide text vertically */
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  -webkit-justify-content: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  -webkit-align-items: center;
+  align-items: center;
+}
+
+.swiper-slide img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.swiper {
+  margin-left: auto;
+  margin-right: auto;
+}
+.box-slider {
+  position: absolute;
+}
+
+.box-slider {
+  bottom: 0;
+  position: absolute;
+  background: #1976d2;
+  width: 100%;
+  padding: 10px 0;
+}
+.box-slider .heading {
+  margin: 0;
+  color: #fff;
+  font-weight: normal;
+}
+.box-slider p {
+  margin: 0;
+  color: #fff;
+}
